SafiUI/safi-ui/tests/compile_fail/mixed_text_and_child.rs
use safi_ui::vnode;

fn main() {
    let _ = vnode! { <A>"hi"<B/></A> };
}
